objects/ACH_Authorization_Form__c.object
<CustomObject>
    <fields>
        <fullName>ABARouting_Number__c</fullName>
        <label>ABA/Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACH_Form_Signed_Date__c</fullName>
        <label>ACH Form Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACH_Notes__c</fullName>
        <label>ACH Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountId_Text__c</fullName>
        <label>AccountId Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Account_DBA_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_DBA_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account DBA Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ACH Authorization Forms</relationshipLabel>
        <relationshipName>ACH_Authorization_Forms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Account_DBA_Name__r.Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Num__c</fullName>
        <label>Bank Account Num</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Type__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bank_Fax_Number__c</fullName>
        <label>Bank Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_NameBranch__c</fullName>
        <label>Bank Name/Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Phone__c</fullName>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bank_State__c</fullName>
        <label>Bank State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Street__c</fullName>
        <label>Bank Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Zip__c</fullName>
        <label>Bank Zip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_city__c</fullName>
        <label>Bank city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_FEIN__c</fullName>
        <label>Company FEIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Structure__c</fullName>
        <label>Company Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual/sole proprietor or single-member LLC</fullName>
                </value>
                <value>
                    <fullName>C Corporation</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Trust/estate</fullName>
                </value>
                <value>
                    <fullName>Limited liability company - C Corp</fullName>
                </value>
                <value>
                    <fullName>Limited liability company - S Corp</fullName>
                </value>
                <value>
                    <fullName>Limited liability company - Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <formula>Account_DBA_Name__r.FEIN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ACH_Deposit_Contact_Title__c</fullName>
        <description>The title of the contact who handles ACH Deposit Forms for this location.</description>
        <label>Location ACH Deposit Contact Title</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_ACH_Deposit_Contact__c</fullName>
        <description>Enter the full name of the Location&apos;s / Vendor&apos;s contact who handles / signs ACH Deposit forms.</description>
        <label>Location ACH Deposit Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <label>Name on Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signee_Print_Name__c</fullName>
        <label>Signee Print Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Compliance Review</fullName>
                </value>
                <value>
                    <fullName>Finance Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <isActive>false</isActive>
                    <label>Denied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <isActive>false</isActive>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACH Authorization Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_FEIN__c</columns>
        <columns>Company_Structure__c</columns>
        <columns>Bank_NameBranch__c</columns>
        <columns>Name_on_Account__c</columns>
        <columns>Bank_Account_Type__c</columns>
        <columns>ABARouting_Number__c</columns>
        <columns>Bank_Account_Num__c</columns>
        <columns>ACH_Form_Signed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>ACH Authorization Form</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACH Authorization Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>